--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "i-am-shakeer",
+	"name": "i-am-masrur",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
@@ -17,7 +17,6 @@
 		"web-vitals": "^1.1.2"
 	},
 	"scripts": {
-		"predeploy": "npm run build",
 		"deploy": "gh-pages -d build",
 		"start": "react-scripts start",
 		"build": "react-scripts build",
